removed unnecessary deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,15 @@ build = "build.rs"
 readme = "README.md" # Include the readme for crates.io
 exclude = ["tests/", "hef/*"] 
 
+[features]
+cli = []
+
 [dependencies]
 cxx = "1.0.136"          # For Rust-to-C++ bindings
 anyhow = "1.0.95"        # Error handling
-clap = { version="4.5.26", features = ["derive"] } # CLI argument parsing
-once_cell = "1.20.2"     # Lazy static initialization
+clap = { version="4.5.26", features = ["derive"], optional = true } # CLI argument parsing
+
+[dev-dependencies]
 lazy_static = "1.5.0"    # Static initialization
 
 [build-dependencies]
@@ -38,3 +42,4 @@ path = "src/lib.rs"
 [[bin]]
 name = "hailors-cli" # This will be the CLI binary name
 path = "src/main.rs"
+required-features = ["cli"] # Only compile this binary if the "cli" feature is enabled
